--- a/vol_1.Rmd
+++ b/vol_1.Rmd
@@ -3,6 +3,12 @@ title: "R Jam Sessions Vol. 1"
 author: "Juan C. Sanchez-Arias"
 date: "25/05/2020"
 output: html_document
+
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
 
 ```{r setup, include=FALSE}
