--- a/vol_1.Rmd
+++ b/vol_1.Rmd
@@ -27,7 +27,8 @@ knitr::opts_chunk$set(echo = TRUE)
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When we **Knit** an R Markdown (.rmd) it will generate a document that includes both content as well as the output of any embedded R code chunks within the document.
-> Slack uses a type of Markdown. you can also find Markdown on GitHub and Reddit!
+
+> Slack has a flavour of Markdown. You can also find Markdown on GitHub (GitHub flavour) and Reddit!
 
 This an example: You can embed an R code chunk like this:
 
@@ -43,7 +44,7 @@ You can also embed plots, for example:
 plot(pressure)
 ```
 
-In the example above, the `echo = FALSE` parameter was added to the ` ```{r}``` ` code chunk to prevent printing of the R code that generated the plot.
+In the example above, the `echo = FALSE` parameter was added to the ` ```{r}``` ` code chunk to prevent printing of the R code `plot(pressure)` that generated the plot.
 
 
 
