--- a/vol_2/vol_2.Rmd
+++ b/vol_2/vol_2.Rmd
@@ -172,7 +172,7 @@ ggplotly(s) %>%
 
 #### By age
 
-#### By mechanims
+#### By mechanism
 
 ## R Jam Sessions Schedule
 Date | R Jam Topic | Relevant Links
