--- a/rjam.Rmd
+++ b/rjam.Rmd
@@ -35,6 +35,6 @@ As a beginner, my code is not the prettiest nor the most efficient and I'm alway
 ## R Jam Sessions Schedule
 Date | R Jam Topic | Relevant Links
 ---| ---| ---|
-2020-05-26 | [Vol.1: Exploring some genes in the developmental brain transcriptome map - brain-span](https://juansamdphd.github.io/rjam/vol_1) | [**Brain**span](http://www.brainspan.org/rnaseq/search/index.html)
-2020-06-12 | [Vol.2: Explore Cali, ve!](https://juansamdphd.github.io/rjam/vol_2) | [Datos Abiertos](http://datos.cali.gov.co/) - [Cali](https://en.wikipedia.org/wiki/Cali)
+2020-05-26 | [Vol.1: Exploring some genes in the developmental brain transcriptome map - brain-span](https://juansanar.github.io/rjam/vol_1) | [**Brain**span](http://www.brainspan.org/rnaseq/search/index.html)
+2020-06-12 | [Vol.2: Explore Cali, ve!](https://juansanar.github.io/rjam/vol_2) | [Datos Abiertos](http://datos.cali.gov.co/) - [Cali](https://en.wikipedia.org/wiki/Cali)
 
